--- a/facebook.html
+++ b/facebook.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/social.css">
-    <title>Instagram</title>
-    
+    <title>Facebook</title>
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="https://www.instagram.com/gustavoguanabara/" target="_blank">ACESSE</a>
+    <img src="imagens/tela-facebook.jpg" alt="Facebook">
+    <a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank">ACESSE</a>
 </body>
 </html>
